Added .gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /CrimeReporting.iml
+/out/production/CrimeReporting/District.class
+/out/production/CrimeReporting/Incident.class
+/out/production/CrimeReporting/menu_text.txt
+/out/production/CrimeReporting/Reporting.class
+/out/production/CrimeReporting/ReportingIO.class
